:wrench: Fix width of category's name and img to make it better on mobile

--- a/froggy-gaming/src/HomepageLayout/homepageCategory/assets/homepagecat.scss
+++ b/froggy-gaming/src/HomepageLayout/homepageCategory/assets/homepagecat.scss
@@ -188,12 +188,13 @@ $hover-animation: cubic-bezier(0.7, 0.3, 0.5, 0.45);
 
             &-name {
                 font-size: 1.4rem;
-                width: calc(40% - 10rem);
+                width: calc(40% - 5rem);
             }
 
             &-img {
-                width: calc(60% - 10rem);
+                width: calc(60% - 5rem);
                 object-fit: cover;
+
             }
         }
     }
